--- a/resources/application.properties
+++ b/resources/application.properties
@@ -1,6 +1,7 @@
 #company name
 
 company = Crayon Industries
+company_gst = PIEUKJFD234J33DJFE
 
 # Resource Paths
 
@@ -12,7 +13,7 @@ suggestionFile = resources/suggestions/suggestions.txt
 
 #spring.h2.console.enabled=true
 spring.datasource.url=jdbc:derby:./database/db;create=false
-spring.datasource.username=sa
+spring.datasource.username=admin
 spring.datasource.password=
 spring.datasource.driverClassName=org.apache.derby.jdbc.EmbeddedDriver
 
@@ -30,7 +31,7 @@ jdbc.password =
 #hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 #hibernate.dialect = org.hibernate.dialect.H2Dialect
 hibernate.dialect = org.hibernate.dialect.DerbyTenSevenDialect
-hibernate.hbm2ddl.auto = none
+hibernate.hbm2ddl.auto = create
 hibernate.show_sql = true
 hibernate.format_sql = false
 
