--- a/resources/application.properties
+++ b/resources/application.properties
@@ -31,7 +31,7 @@ jdbc.password =
 #hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 #hibernate.dialect = org.hibernate.dialect.H2Dialect
 hibernate.dialect = org.hibernate.dialect.DerbyTenSevenDialect
-hibernate.hbm2ddl.auto = create
+hibernate.hbm2ddl.auto = none
 hibernate.show_sql = true
 hibernate.format_sql = false
 
